Fixed layout issue where if content wasnt sufficient, layout wouldnt be right width

--- a/src/less/components/_layouts.less
+++ b/src/less/components/_layouts.less
@@ -44,7 +44,6 @@
     .layout-main {
         display: table-cell;
         padding: 10px;
-        //border: solid 10px rgb(255,111,32); /* emulate padding*/
         transition: all 0.25s;
         vertical-align: top;
 
@@ -54,13 +53,12 @@
 
         /*@media (min-width: @large-breakpoint) {
             padding: @large-outer-spacing;
-            //border-width: @large-outer-spacing; // emulate padding
         }*/
 
     }
 
     .layout-main {
-
+        width: 100%;
         /*@media (max-width: @small-breakpoint) {
             border-color: rgb(231,0,51);
         }*/
